--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ section {
 
   color: #ff7300;
 }
-.about-wrapper span {
+.about-wrapper #element {
   font-size: 2rem;
   color: #8892b0;
   margin: 0;
