--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ section {
 .education_info .ed .coursework span{
   text-decoration: underline ;
   text-underline-offset: 3px;
+  text-align: justify;
 }
 
 .ed {
@@ -677,6 +678,10 @@ text-align: justify;
     margin: 0 1rem;
     padding: 4rem 1rem;
   }
+
+  .card{
+    padding-left: 15px;
+  }
 }
 
 
@@ -762,6 +767,7 @@ text-align: justify;
   
   .certification_info{
     width: 90%;
+    padding-left: 1.5rem;
   }
   
 }
@@ -975,6 +981,10 @@ text-align: justify;
 @media only screen and (max-width: 1000px){
   #contact form{
     width: 100%;
+  }
+
+  .contact-form form{
+    padding: 10px;
   }
 
   .form-map{
