--- a/style.css
+++ b/style.css
@@ -887,6 +887,7 @@ text-align: justify;
 
 .languages-info {
   margin-top: 1rem;
+  margin-left: 0.7rem;
   display: flex;
   flex-direction: column;
   gap: 5px;
