--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ section {
   border-radius: 50%;
   background-color: var(--green_neon);
 }
-
+#card-3
 .education_info .ed h3{
   color: var(--blue_neon);
   font-weight: 600;
